--- a/src/App.css
+++ b/src/App.css
@@ -5,17 +5,41 @@
   "n c";
   grid-template-rows: 60px 1fr;
   grid-template-columns: 2fr 10fr;
-  /*grid-gap: 10px;*/
+  grid-gap: 10px;
 }
 
 .header {
   grid-area: h;
+  background-color: lightblue;
 }
 
 .nav {
   grid-area: n;
+  background-color: rgb(63, 63, 102);
 }
 
 .content {
   grid-area: c;
+  background-color: bisque;
+}
+
+.header img {
+  height: 80%;
+}
+
+ul {
+  list-style: none;
+}
+
+a {
+  color: whitesmoke;
+  text-decoration: none;
+}
+
+a:hover {
+  color: lightblue;
+}
+
+.content img {
+  width: 100%;
 }
